name:                Haskell-Ninety-Nine-Problems
version:             0.1.0.0
-- synopsis:
-- description:
-- homepage:
-- license:
-- license-file:
author:              Daniel Phan
maintainer:          n/a
-- copyright:
category:            none
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , random
  exposed-modules:     Questions
  other-modules:       Q01To10
                     , Q11To20
                     , Q21To28
                     , Q31To41
                     , Q46To50
                     , Q55To60
                     , Q61To69
                     , Q61To69Trees
                     , Q70To73
  ghc-options:         -Wall -O
